--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -12,6 +12,7 @@
 }
 
 .item {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -35,9 +36,8 @@
 .delete-btn {
   position: absolute;
   right: 0;
-  top: 0;
-  bottom: 0;
-  width: 80px;
+  top: 1px;
+  bottom: 1px;
   background-color: #e53935;
   color: white;
   display: flex;
