(Fix): Delete drag behaviour

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -19,9 +19,9 @@
       <div class="item" >
         <nz-collapse
           [style.transform]="'translateX(' + name.transform + 'px)'"
-          (touchstart)="onTouchStart($event, i)" (touchmove)="onTouchMove($event, i, j)"
-          (touchend)="onTouchEnd(i,j)" (mousedown)="onTouchStart($event, i)" (mousemove)="onTouchMove($event, i, j)"
-          (mouseup)="onTouchEnd(i,j)" (mouseleave)="onTouchEnd(i,j)" class="transition-[background-color] duration-300 z-10"
+          (touchstart)="onTouchStart($event, i, j)" (touchmove)="onTouchMove($event, i, j)"
+          (touchend)="onTouchEnd(i,j)" (mousedown)="onTouchStart($event, i, j)" (mousemove)="onTouchMove($event, i, j)"
+          (mouseup)="onTouchEnd(i,j)" class="transition-[background-color] duration-300 z-10"
           [class.bg-[#319ebf]]="name.checkedByAdri" [class.text-white]="name.checkedByAdri || name.checkedByElena"
           [class.bg-[#58c990]]="name.checkedByElena" [ngClass]="{
         'bg-gradient-to-r from-[#319ebf] to-[#58c990]': name.checkedByAdri && name.checkedByElena
@@ -69,7 +69,7 @@
             }
           </nz-collapse-panel>
         </nz-collapse>
-        <div class="delete-btn" [style.width]="name.transform!* -1  + 'px'" (click)="onDeleteName(name?._id || '')">
+        <div class="delete-btn overflow-hidden" [style.width]="name.transform!* -1  + 'px'" (click)="onDeleteName(name?._id || '')">
           <nz-icon nz-icon nzType="delete" nzTheme="outline" />
         </div>
       </div>
