--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,13 +1,9 @@
 <div
-  class="fixed right-4 bottom-4 w-[300px] bg-white rounded-sm shadow-lg p-4 flex items-start gap-4 opacity-0 translate-y-[150%] transition-[opacity,transform] duration-300 ease-in-out z-[9999]"
+  class="fixed right-4 bottom-4 w-[300px] bg-white rounded-sm shadow-lg p-4 flex items-center gap-4 opacity-0 translate-y-[150%] transition-[opacity,transform] duration-300 ease-in-out z-[9999]"
   [class.!opacity-100]="notification()"
   [class.!translate-y-0]="notification()"
 >
-  <img
-    class="w-6"
-    [src]="'../../../assets/svgs/' + (notification()?.type || 'success') + '.svg'"
-    alt=""
-  />
+  <nz-icon nz-icon nzType="check-circle" nzTheme="outline" class="w-6 text-green-400" />
   <div class="notification-card" (click)="onCloseNotification()">
     {{ notification()?.message }}
   </div>
